Wider scrollbar, fix #41

--- a/src/layout/ui.css
+++ b/src/layout/ui.css
@@ -1,7 +1,7 @@
 /* scrollbar */
 ::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
+    width: 12px;
+    height: 12px;
 }
 
 ::-webkit-scrollbar-track-piece {
